--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,7 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraController.cs" />
-    <Compile Include="Assets\Scripts\CameraRigScript.cs" />
+    <Compile Include="Assets\Scripts\CameraFocus.cs" />
     <Compile Include="Assets\Scripts\Rotate.cs" />
     <Compile Include="Assets\Scripts\RotationTrigo.cs" />
     <Reference Include="Unity.PackageManagerUI.Editor">
