[OAI] add menu 0.5/2

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\Cameras\CameraFocus.cs" />
     <Compile Include="Assets\Scripts\Cameras\FpsCameraController.cs" />
     <Compile Include="Assets\Scripts\Cameras\RtsCameraController.cs" />
+    <Compile Include="Assets\Scripts\Menu\Menu.cs" />
     <Compile Include="Assets\Scripts\Rotate.cs" />
     <Compile Include="Assets\Scripts\RotationTrigo.cs" />
     <Reference Include="UnityEditor.StandardEvents">
